--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,8 +9,15 @@
 
 <div class="row">
     <div class="column" style="width: 33%">
-        <h3>Tags</h3>
+        <h3>Popular Tags</h3>
         <hr />
+        @{
+            @for (int i = 0; i < (ViewBag.Tags.Count < 7 ? ViewBag.Tags.Count : 7); i++)
+            {
+                <p><a asp-controller="Items" asp-action="ShowSearchResults" asp-route-SearchPhrase="@ViewBag.Tags[i].Text.ToString()">@ViewBag.Tags[i].Text.ToString()</a></p>
+                <hr />
+            }
+        }        
     </div>
 
     <div class="column" style="width: 33%">
@@ -29,7 +36,7 @@
         @for (int i = 0; i < (ViewBag.LastItems.Count < 5 ? ViewBag.LastItems.Count : 5); i++)
         {
             <p><a asp-controller="Items" asp-action="Details" asp-route-id="@ViewBag.LastItems[i].Id">@ViewBag.LastItems[i].Name.ToString()</a></p>
-            <hr />         
+            <hr />
         }
     </div>
 </div>
