--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,4 +4,4 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Application is running in Azure Cloud.</p>
-<p>You can find source code on <a href="http://google.com">GitHub</a>.</p>
+<p>You can find source code on <a href="https://github.com/yeontannie/FinalProject/tree/master">GitHub</a>.</p>
